--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -92,14 +92,14 @@ endpoints:
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
-      email:
-        name: email
-        description: 'The email of the user.'
+      login:
+        name: login
+        description: ''
         required: true
-        example: john@example.com
+        example: nam
         type: string
         enumValues: []
-        exampleWasSpecified: true
+        exampleWasSpecified: false
         custom: []
       password:
         name: password
@@ -110,9 +110,19 @@ endpoints:
         enumValues: []
         exampleWasSpecified: true
         custom: []
+      email:
+        name: email
+        description: 'The email of the user.'
+        required: true
+        example: john@example.com
+        type: string
+        enumValues: []
+        exampleWasSpecified: true
+        custom: []
     cleanBodyParameters:
-      email: john@example.com
+      login: nam
       password: pass1234
+      email: john@example.com
     fileParameters: []
     responses: []
     responseFields: []
@@ -176,13 +186,13 @@ endpoints:
         name: email
         description: 'The email of the user who is requesting a password reset.'
         required: true
-        example: estelle53@example.com
+        example: usatterfield@example.org
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      email: estelle53@example.com
+      email: usatterfield@example.org
     fileParameters: []
     responses: []
     responseFields: []
@@ -216,7 +226,7 @@ endpoints:
         name: current_password
         description: 'The current password of the user.'
         required: true
-        example: odio
+        example: quis
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -225,7 +235,7 @@ endpoints:
         name: new_password
         description: 'The new password to set.'
         required: true
-        example: et
+        example: est
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -234,15 +244,15 @@ endpoints:
         name: new_password_confirmation
         description: 'Confirmation of the new password.'
         required: true
-        example: id
+        example: et
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      current_password: odio
-      new_password: et
-      new_password_confirmation: id
+      current_password: quis
+      new_password: est
+      new_password_confirmation: et
     fileParameters: []
     responses: []
     responseFields: []
@@ -665,7 +675,7 @@ endpoints:
         name: title
         description: 'Must not be greater than 255 characters.'
         required: true
-        example: epxpuyugdzcj
+        example: exesnwytcadlslxttnll
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -674,7 +684,7 @@ endpoints:
         name: content
         description: ''
         required: true
-        example: voluptate
+        example: accusamus
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -683,7 +693,7 @@ endpoints:
         name: video_url
         description: 'Must be a valid URL.'
         required: false
-        example: 'http://connelly.com/'
+        example: 'http://volkman.biz/'
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -692,7 +702,7 @@ endpoints:
         name: category
         description: ''
         required: true
-        example: doloremque
+        example: iste
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -701,17 +711,17 @@ endpoints:
         name: sub_category
         description: ''
         required: true
-        example: repellendus
+        example: id
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      title: epxpuyugdzcj
-      content: voluptate
-      video_url: 'http://connelly.com/'
-      category: doloremque
-      sub_category: repellendus
+      title: exesnwytcadlslxttnll
+      content: accusamus
+      video_url: 'http://volkman.biz/'
+      category: iste
+      sub_category: id
     fileParameters: []
     responses: []
     responseFields: []
@@ -741,13 +751,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: rem
+        example: iste
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: rem
+      id: iste
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -758,7 +768,7 @@ endpoints:
         status: 404
         content: |-
           {
-              "message": "The route backend/api/inspire/posts/rem could not be found.",
+              "message": "The route backend/api/inspire/posts/iste could not be found.",
               "exception": "Symfony\\Component\\HttpKernel\\Exception\\NotFoundHttpException",
               "file": "C:\\MAMP\\htdocs\\backend\\vendor\\laravel\\framework\\src\\Illuminate\\Routing\\AbstractRouteCollection.php",
               "line": 44,
@@ -1140,13 +1150,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: et
+        example: perspiciatis
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: et
+      id: perspiciatis
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -1154,7 +1164,7 @@ endpoints:
         name: title
         description: 'Must not be greater than 255 characters.'
         required: false
-        example: ku
+        example: twxmgxazngldqwi
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -1163,7 +1173,7 @@ endpoints:
         name: content
         description: ''
         required: false
-        example: et
+        example: ducimus
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -1172,7 +1182,7 @@ endpoints:
         name: video_url
         description: 'Must be a valid URL.'
         required: false
-        example: 'http://www.vonrueden.com/earum-asperiores-minima-cupiditate-tempore-minus-accusamus.html'
+        example: 'http://herman.com/enim-at-sed-qui-sit-praesentium-ut'
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -1181,7 +1191,7 @@ endpoints:
         name: category
         description: ''
         required: false
-        example: voluptatibus
+        example: quasi
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -1190,7 +1200,7 @@ endpoints:
         name: sub_category
         description: ''
         required: false
-        example: ipsam
+        example: vel
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -1199,7 +1209,7 @@ endpoints:
         name: status
         description: ''
         required: false
-        example: active
+        example: inactive
         type: string
         enumValues:
           - active
@@ -1207,12 +1217,12 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      title: ku
-      content: et
-      video_url: 'http://www.vonrueden.com/earum-asperiores-minima-cupiditate-tempore-minus-accusamus.html'
-      category: voluptatibus
-      sub_category: ipsam
-      status: active
+      title: twxmgxazngldqwi
+      content: ducimus
+      video_url: 'http://herman.com/enim-at-sed-qui-sit-praesentium-ut'
+      category: quasi
+      sub_category: vel
+      status: inactive
     fileParameters: []
     responses: []
     responseFields: []
@@ -1242,13 +1252,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: repellendus
+        example: assumenda
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: repellendus
+      id: assumenda
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -1675,7 +1685,7 @@ endpoints:
         name: post_title
         description: 'Must not be greater than 255 characters.'
         required: true
-        example: k
+        example: bfsr
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -1684,7 +1694,7 @@ endpoints:
         name: post_short_description
         description: 'Must not be greater than 255 characters.'
         required: true
-        example: rbwjxlxgn
+        example: lycmbmlttcubygbrxxrblaw
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -1702,7 +1712,7 @@ endpoints:
         name: post_price
         description: '2MB max size.'
         required: true
-        example: 244392.95561
+        example: 2379.0
         type: number
         enumValues: []
         exampleWasSpecified: false
@@ -1711,7 +1721,7 @@ endpoints:
         name: post_price_type
         description: ''
         required: true
-        example: hourly
+        example: fixed
         type: string
         enumValues:
           - fixed
@@ -1722,7 +1732,7 @@ endpoints:
         name: post_status
         description: ''
         required: true
-        example: active
+        example: inactive
         type: string
         enumValues:
           - active
@@ -1730,11 +1740,11 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      post_title: k
-      post_short_description: rbwjxlxgn
-      post_price: 244392.95561
-      post_price_type: hourly
-      post_status: active
+      post_title: bfsr
+      post_short_description: lycmbmlttcubygbrxxrblaw
+      post_price: 2379.0
+      post_price_type: fixed
+      post_status: inactive
     fileParameters:
       post_image: null
     responses: []
@@ -1765,13 +1775,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: numquam
+        example: necessitatibus
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: numquam
+      id: necessitatibus
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -1782,7 +1792,7 @@ endpoints:
         status: 404
         content: |-
           {
-              "message": "The route backend/api/ican/posts/numquam could not be found.",
+              "message": "The route backend/api/ican/posts/necessitatibus could not be found.",
               "exception": "Symfony\\Component\\HttpKernel\\Exception\\NotFoundHttpException",
               "file": "C:\\MAMP\\htdocs\\backend\\vendor\\laravel\\framework\\src\\Illuminate\\Routing\\AbstractRouteCollection.php",
               "line": 44,
@@ -2164,13 +2174,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: repellat
+        example: hic
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: repellat
+      id: hic
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -2178,7 +2188,7 @@ endpoints:
         name: post_title
         description: 'Must not be greater than 255 characters.'
         required: false
-        example: rdiajrbenywsggmcfpgmtl
+        example: rucvayjhdfvnrcdk
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -2187,7 +2197,7 @@ endpoints:
         name: post_short_description
         description: 'Must not be greater than 255 characters.'
         required: false
-        example: wcybbitdjdvrwlcem
+        example: kfrmdepgl
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -2205,7 +2215,7 @@ endpoints:
         name: post_price
         description: ''
         required: false
-        example: 364387.0
+        example: 6.655
         type: number
         enumValues: []
         exampleWasSpecified: false
@@ -2233,9 +2243,9 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      post_title: rdiajrbenywsggmcfpgmtl
-      post_short_description: wcybbitdjdvrwlcem
-      post_price: 364387.0
+      post_title: rucvayjhdfvnrcdk
+      post_short_description: kfrmdepgl
+      post_price: 6.655
       post_price_type: hourly
       post_status: inactive
     fileParameters:
@@ -2268,13 +2278,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: necessitatibus
+        example: nisi
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: necessitatibus
+      id: nisi
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -2701,7 +2711,7 @@ endpoints:
         name: post_title
         description: 'Must not be greater than 255 characters.'
         required: true
-        example: vcupjknvryvyg
+        example: cmfdgheldgmbeaojmdwuoqdyj
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -2710,7 +2720,7 @@ endpoints:
         name: post_short_description
         description: 'Must not be greater than 255 characters.'
         required: true
-        example: xwnfbpvcgndcqxdoqj
+        example: dmrzapou
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -2728,7 +2738,7 @@ endpoints:
         name: post_price
         description: '2MB max size.'
         required: true
-        example: 2485140.43
+        example: 129566420.1
         type: number
         enumValues: []
         exampleWasSpecified: false
@@ -2737,7 +2747,7 @@ endpoints:
         name: post_price_type
         description: ''
         required: true
-        example: fixed
+        example: hourly
         type: string
         enumValues:
           - fixed
@@ -2756,10 +2766,10 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      post_title: vcupjknvryvyg
-      post_short_description: xwnfbpvcgndcqxdoqj
-      post_price: 2485140.43
-      post_price_type: fixed
+      post_title: cmfdgheldgmbeaojmdwuoqdyj
+      post_short_description: dmrzapou
+      post_price: 129566420.1
+      post_price_type: hourly
       post_status: inactive
     fileParameters:
       post_image: null
@@ -2791,13 +2801,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: sint
+        example: tempore
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: sint
+      id: tempore
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -2808,7 +2818,7 @@ endpoints:
         status: 404
         content: |-
           {
-              "message": "The route backend/api/ineed/posts/sint could not be found.",
+              "message": "The route backend/api/ineed/posts/tempore could not be found.",
               "exception": "Symfony\\Component\\HttpKernel\\Exception\\NotFoundHttpException",
               "file": "C:\\MAMP\\htdocs\\backend\\vendor\\laravel\\framework\\src\\Illuminate\\Routing\\AbstractRouteCollection.php",
               "line": 44,
@@ -3190,13 +3200,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: autem
+        example: quia
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: autem
+      id: quia
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -3204,7 +3214,7 @@ endpoints:
         name: post_title
         description: 'Must not be greater than 255 characters.'
         required: false
-        example: udkcxgwdurksubinbcqwuci
+        example: lppa
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -3213,7 +3223,7 @@ endpoints:
         name: post_short_description
         description: 'Must not be greater than 255 characters.'
         required: false
-        example: fpekrneladoftanjq
+        example: sixhixqhl
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -3231,7 +3241,7 @@ endpoints:
         name: post_price
         description: ''
         required: false
-        example: 180459915.0
+        example: 330111659.33442
         type: number
         enumValues: []
         exampleWasSpecified: false
@@ -3251,7 +3261,7 @@ endpoints:
         name: post_status
         description: ''
         required: false
-        example: inactive
+        example: active
         type: string
         enumValues:
           - active
@@ -3259,11 +3269,11 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      post_title: udkcxgwdurksubinbcqwuci
-      post_short_description: fpekrneladoftanjq
-      post_price: 180459915.0
+      post_title: lppa
+      post_short_description: sixhixqhl
+      post_price: 330111659.33442
       post_price_type: hourly
-      post_status: inactive
+      post_status: active
     fileParameters:
       post_image: null
     responses: []
@@ -3294,13 +3304,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: aut
+        example: id
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: aut
+      id: id
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
