--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "knuckleswtf/scribe": "^4.35",
         "laravel/framework": "^11.0",
         "laravel/passport": "^12.0",
+        "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
