--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.310",
         "knuckleswtf/scribe": "^4.35",
         "laravel/framework": "^11.0",
         "laravel/passport": "^12.0",
